--- a/style.css
+++ b/style.css
@@ -12,10 +12,23 @@ html {
 
 body {
   min-height: 100%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 svg {
   height: 2rem;
   width: auto;
+}
+
+button {
+  outline: none;
+  border: none;
+  border-radius: 100%;
+  appearance: none;
+  background: none;
+  padding: 0.2rem 0.4rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 aside,
@@ -28,6 +41,25 @@ section {
   /* outline: 2px solid rgb(255, 0, 0); */
 }
 
+.profile-pic {
+  border-radius: 100%;
+  border: 2px solid black;
+}
+
+.lrg {
+  height: 5rem;
+  width: auto;
+}
+
+.med {
+  height: 3rem;
+  width: auto;
+}
+
+.icon {
+  font-size: 1.8rem;
+}
+
 .admin-page {
   display: grid;
   grid-template: 1fr 2fr 2fr / 1fr 3fr 1fr;
@@ -35,8 +67,119 @@ section {
 
 .header {
   grid-area: 1 / 2 / 2 / 4;
-  /* background-color: red; */
-  padding: 1.5rem 2.5rem;
+  display: grid;
+  gap: 1.5rem;
+  padding: 1rem 3rem;
+
+  .upper-section {
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    gap: 1rem;
+    align-items: center;
+
+    .header-search-bar {
+      display: grid;
+      place-items: center;
+      position: relative;
+    }
+
+    .icon:not(.mdi-magnify) {
+      padding: 0.5rem 0.6rem;
+      border-radius: 100%;
+      transition: all 0.3s ease;
+      &:hover {
+        background-color: black;
+        color: white;
+      }
+    }
+
+    .search-btn {
+      position: absolute;
+      top: 1px;
+      left: 0px;
+
+      padding: 0.3rem 0.5rem;
+      border-radius: 25px 0px 0px 25px;
+    }
+
+    input[type="text"] {
+      outline: none;
+      appearance: none;
+      border: 2px solid transparent;
+      background-color: rgb(223, 223, 223);
+      border-radius: 30px;
+      min-width: 100%;
+      padding: 0.7rem 0.7rem 0.7rem 3.5rem;
+      font-size: 1rem;
+      transition: 0.3s ease;
+      &:focus {
+        border: 2px solid black;
+        & + button {
+          background-color: rgb(0, 0, 0);
+          color: white;
+        }
+      }
+    }
+
+    .username-notification {
+      display: grid;
+      grid-auto-flow: column;
+      gap: 1rem;
+      place-items: center;
+    }
+
+    p {
+      font-weight: bold;
+    }
+  }
+
+  .lower-section {
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+
+    .header-profile {
+      display: grid;
+      grid-template-columns: 1fr 7fr;
+      gap: 0.5rem;
+      align-items: center;
+    }
+
+    .header-actions {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 1rem;
+      place-items: center;
+
+      button {
+        outline: none;
+        appearance: none;
+        border: 2.5px solid transparent;
+        padding: 0.5rem 1.5rem;
+        font-size: 1.1rem;
+        font-weight: bold;
+        border-radius: 20px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        opacity: 0.8;
+
+        background-color: black;
+        color: white;
+
+        &:hover {
+          opacity: 1;
+          background-color: white;
+          color: black;
+          border: 2.5px solid black;
+        }
+
+        &:active {
+          opacity: 1;
+          background-color: black;
+          color: white;
+        }
+      }
+    }
+  }
 }
 
 .sidebar-left {
