--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ button {
   transition: all 0.3s ease;
 }
 
+a {
+  text-decoration: none;
+}
+
 aside,
 main,
 header,
@@ -62,14 +66,14 @@ section {
 
 .admin-page {
   display: grid;
-  grid-template: 1fr 2fr 2fr / 1fr 3fr 1fr;
+  grid-template: 1fr 4fr 1fr / 1fr 3fr 1fr;
 }
 
 .header {
   grid-area: 1 / 2 / 2 / 4;
   display: grid;
   gap: 1.5rem;
-  padding: 1rem 3rem;
+  padding: 1.5rem 2.5rem;
 
   .upper-section {
     display: grid;
@@ -254,7 +258,53 @@ section {
 
 .content {
   grid-area: 2 / 2 / 4 / 3;
-  background-color: blue;
+  background-color: rgb(220, 220, 220);
+  padding: 2rem 1rem;
+
+  h3 {
+    padding: 0.2rem 0.6rem;
+    border-left: 5px dotted black;
+  }
+
+  h4 {
+    font-size: 1.2rem;
+    margin-bottom: 0.2rem;
+  }
+
+  p {
+    font-size: 1rem;
+    color: rgb(58, 58, 58);
+    line-height: 1.5;
+  }
+
+  .projects {
+    display: grid;
+    grid-template: 1fr / repeat(auto-fit, minmax(35%, 1fr));
+    gap: 1.5rem;
+    margin-top: 1.2rem;
+  }
+
+  .project-card {
+    display: grid;
+    grid-template-rows: 5fr 1fr;
+    /* gap: 1rem; */
+    align-items: center;
+
+    background-color: rgb(205, 205, 205);
+    border-left: 10px solid black;
+    border-radius: 6px;
+    /* height: 100%; */
+    padding: 1.5rem 1.5rem 1rem 1.5rem;
+  }
+
+  a {
+    color: black;
+  }
+
+  .project-card-actions {
+    justify-self: end;
+    align-self: end;
+  }
 }
 
 .sidebar-right {
