--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   min-height: 100%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 15px;
 }
 svg {
   height: 2rem;
@@ -33,6 +34,10 @@ button {
 
 a {
   text-decoration: none;
+}
+
+p {
+  font-style: 1rem;
 }
 
 aside,
@@ -66,12 +71,14 @@ section {
 
 .admin-page {
   display: grid;
-  grid-template: 1fr 4fr 1fr / 1fr 3fr 1fr;
+  grid-template: 1fr 4fr / 1fr 3fr 1fr;
+  background-color: rgb(220, 220, 220);
 }
 
 .header {
   grid-area: 1 / 2 / 2 / 4;
   display: grid;
+  background-color: white;
   gap: 1.5rem;
   padding: 1.5rem 2.5rem;
 
@@ -187,8 +194,7 @@ section {
 }
 
 .sidebar-left {
-  grid-area: 1 / 1 / 4 / 2;
-
+  grid-area: 1 / 1 / 3 / 2;
   background-color: rgb(0, 0, 0);
 
   h2 {
@@ -257,12 +263,12 @@ section {
 }
 
 .content {
-  grid-area: 2 / 2 / 4 / 3;
-  background-color: rgb(220, 220, 220);
+  grid-area: 2 / 2 / 3 / 3;
   padding: 2rem 1rem;
 
   h3 {
     padding: 0.2rem 0.6rem;
+    margin-bottom: 1rem;
     border-left: 5px dotted black;
   }
 
@@ -272,7 +278,6 @@ section {
   }
 
   p {
-    font-size: 1rem;
     color: rgb(58, 58, 58);
     line-height: 1.5;
   }
@@ -281,24 +286,43 @@ section {
     display: grid;
     grid-template: 1fr / repeat(auto-fit, minmax(35%, 1fr));
     gap: 1.5rem;
-    margin-top: 1.2rem;
   }
 
   .project-card {
     display: grid;
-    grid-template-rows: 5fr 1fr;
-    /* gap: 1rem; */
+    grid-template-rows: 2fr 1fr;
     align-items: center;
 
     background-color: rgb(205, 205, 205);
     border-left: 10px solid black;
     border-radius: 6px;
-    /* height: 100%; */
-    padding: 1.5rem 1.5rem 1rem 1.5rem;
+    height: 100%;
+    padding: 2.5rem 1.5rem 1rem 1.5rem;
+    transition: all 0.3s ease;
   }
+
+  /* .projects:hover .project-card:not(:hover) {
+    opacity: 0.5;
+  } */
 
   a {
     color: black;
+
+    &:hover > h4 {
+      border-bottom: 3px solid black;
+    }
+  }
+
+  h4 {
+    display: inline-block;
+    padding: 0.1rem;
+    margin-bottom: 0.4rem;
+    border-bottom: 3px solid transparent;
+    transition: all 0.3s ease;
+  }
+
+  .project-card-text {
+    align-self: start;
   }
 
   .project-card-actions {
@@ -308,6 +332,53 @@ section {
 }
 
 .sidebar-right {
-  grid-area: 2 / 3 / 4 / 4;
-  background-color: yellow;
+  grid-area: 2 / 3 / 3 / 4;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  padding: 2rem 1.5rem 2rem 1rem;
+  gap: 1.3rem;
+
+  h3 {
+    padding: 0.2rem 0.6rem;
+    margin-bottom: 1rem;
+  }
+
+  .sidebar-card {
+    background-color: rgb(205, 205, 205);
+    padding: 1.5rem;
+    border-radius: 6px;
+  }
+
+  .announcement {
+    padding: 1rem 0;
+
+    &:not(:last-child) {
+      border-bottom: 2px solid grey;
+    }
+  }
+
+  .trending > .sidebar-card {
+    display: grid;
+    gap: 1rem;
+  }
+
+  .trending-item {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 0.5rem;
+
+    & > * {
+      align-self: center;
+    }
+  }
+
+  p {
+    line-height: 1.2rem;
+    color: rgb(58, 58, 58);
+  }
+
+  span {
+    color: black;
+    font-weight: 500;
+  }
 }
